--- a/index.html
+++ b/index.html
@@ -49,21 +49,37 @@
       .container {
         display: grid;
         grid-gap: 10px;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(9, 1fr);
       }
 
       .item1 {
-        grid-column: 3 / span 3;
-        grid-row: 3 / 5;
+        grid-column: 3 / 5;
       }
 
-      .item9 {
-        background: mistyrose;
-        /* width 100% */
-        grid-column: 1 / span 2;
-        grid-row: 1 / 8;
+      .item2 {
+        grid-column: 5 / -1;
+      }
 
+      .item5 {
+        grid-column: span 2;
+        grid-row: span 2;
+      }
+
+      .item8 {
+        grid-row: span 2;
+      }
+
+      .item15 {
+        grid-column: 1 / -1;
+      }
+
+      .item18 {
+        grid-column: 4 / 9;
+      }
+
+      .item20 {
+        grid-row: 4 / 7;
       }
     </style>
   </body>
