--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
     </div>
 
     <style>
+      /* main grid style */
+
       .container {
         display: grid;
         grid-gap: 20px;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         grid-template-rows: repeat(3, 1fr)
       }
+
+      /* second grid inside items */
 
       .content {
         display: grid;
